fix: Improve visibility for folders' add and delete buttons
We got some feedback about those butons being not enough visible due to
low contrast with their background

New colors should improve contrast

--- a/src/scss/cozy.scss
+++ b/src/scss/cozy.scss
@@ -122,8 +122,14 @@ app-vault-ciphers {
         app-cozy-icon {
             margin-right: 0px;
             svg {
-                fill: var(--secondaryButtonActiveColor);
-            } 
+                fill: var(--secondaryTextColor);
+            }
+
+            &:hover, &:focus {
+                svg {
+                    fill: var(--iconTextColor);
+                }
+            }
         }
     }
 }
